Fixed missing color for wettkaempfer. improved print of begegnungen

--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -356,3 +356,9 @@ tr {
   border: 1px solid #ccc;
   border-top: none;
 } 
+
+.groupsrow {
+  outline: black;
+  outline-style: auto;
+  
+}
